compilador/Test/Cases/should-fail/test_propios_Err_Type_4.pcf
let tst : Nat = 5 + succ